crates/context-macro/tests/constraints/init_seeds_keys.fail.stderr
error: `seeds` or `seeded` are already defined.
  --> tests/constraints/init_seeds_keys.fail.rs:30:9
   |
30 |     pub counter: Mut<Account<Counter>>,
   |         ^^^^^^^
