crates/context-macro/tests/constraints/init_seeds_keys.fail.rs
use {
    bytemuck::{AnyBitPattern, NoUninit},
    pinocchio::{
        address::{address_eq, declare_id},
        Address,
    },
    typhoon_account_macro::*,
    typhoon_context_macro::*,
    typhoon_program_id_macro::program_id,
    typhoon_traits::*,
};

program_id!("Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS");

#[derive(NoUninit, AnyBitPattern, AccountState, Copy, Clone)]
#[repr(C)]
pub struct Counter {
    pub count: u64,
}

#[context]
#[args(admin: Address, bump: u8)]
pub struct InitContext {
    pub payer: Mut<Signer>,
    #[constraint(
        init,
        payer = payer,
        space = Counter::SPACE,
        seeds = [&args.admin],
        seeded = [&args.admin],
        bump
    )]
    pub counter: Mut<Account<Counter>>,
    pub system: Program<System>,
}

pub fn main() {}
